--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#34c759</color>
+    <color name="light_yellow">#F9E6B5</color>
+    <color name="grey">#807b7b</color>
+    <color name="yellow">#E5AD16</color>
+
 </resources>
